--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "start-server-and-test dev 3000 cypress:open",
+    "cypress:open": "cypress open",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "cypress": "^13.6.2",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "start-server-and-test": "^2.0.3",
+    "tailwindcss": "^3.3.0"
   }
 }
